# german-tutor

./: .env.example  .gitignore  README.md  SUMMARY.md  pyproject.toml
.relai/: learning-env-context.json  mock-manifest.json  optimizer-learning-envs.json  runtime-manifest.json  simulator.env.example
.relai/learning-envs/: beginner-lesson-detail.py  cefr-level-discipline.py  detailed-no-german-assumed.py  give-detailed-lessons-then-give-shorter-breakdow.py  high-quality-lesson.py  judges-whether-short-continuation-replies-advanc.py  keep-continuing-dont-ask-what-would-you-like-nex.py  keeps-momentum.py  lesson-continues-after-answers.py  the-lessons-arent-detailed-enough-for-a-beginner.py  the-lessons-introduces-new-words-but-then-doesnt.py  the-tutot-keeps-asking-if-the-user-wants-the-con.py
.relai/simulator/: .gitignore  check.sh  install.sh  pyproject.toml
.relai/simulator/frameworks/: langchain.md
content/: index.json
content/grammar/: alphabet.txt  cases.txt  dative-prepositions.txt  nouns.txt  pronouns.txt  sentences.txt  verbs.txt
content/lessons/: lesson-01.txt  lesson-02.txt  lesson-03.txt  lesson-04.txt  lesson-05.txt  lesson-06.txt  lesson-07.txt  lesson-08.txt  level1-essen.txt  level1-familie.txt  level1-freizeit.txt  level1-kleidung.txt
curriculum/: a1.yaml  a2.yaml  b1.yaml  b2.yaml
scripts/: fetch_content.py
src/german_tutor/: __init__.py  cli.py  curriculum.py  graph.py  logging.py  persistence.py  schemas.py  srs.py  tools_lc.py  tts.py
src/german_tutor/web/: __init__.py  server.py
tests/: test_core.py
(+8 files in other folders)
